force-app/main/default/objects/Trade_In_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Trade In Items</relationshipLabel>
    <relationshipName>Trade_In_Items</relationshipName>
    <type>Lookup</type>
</CustomField>