force-app/main/default/objects/Trade_In_Item__c/fields/Serial_Number_Matched__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Matched__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serial Number Matched</label>
    <referenceTo>GMBLASERP__Serial_Number__c</referenceTo>
    <relationshipLabel>Trade In Items</relationshipLabel>
    <relationshipName>Trade_In_Items</relationshipName>
    <type>Lookup</type>
</CustomField>