force-app/main/default/objects/Trade_In_Item__c/fields/Trade_In_Record__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Record__c</fullName>
    <label>Trade In Record</label>
    <referenceTo>Trade_In_Record__c</referenceTo>
    <relationshipLabel>Trade In Items</relationshipLabel>
    <relationshipName>Trade_In_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>